[package]
name = "veldera_config"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Hot-reloadable, file-backed TOML configuration plumbing for Bevy apps"

[dependencies]
bevy = { workspace = true, features = ["bevy_asset"] }
bevy_common_assets = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[lints]
workspace = true
