[package]
name = "veldera_engine"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Umbrella facade for the Veldera engine: re-exports every engine crate and bundles the always-on infrastructure into an EnginePlugins group"

[dependencies]
bevy = { workspace = true, features = ["bevy_asset"] }
veldera_async = { workspace = true }
veldera_camera = { workspace = true }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_input = { workspace = true }
veldera_physics = { workspace = true }
veldera_sky = { workspace = true }
veldera_terrain = { workspace = true }

# The CPU profiler's tracing layer is native-only (`tracing-subscriber` is not
# compiled on wasm; the profiler degrades to an empty stub there).
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
