[package]
name = "veldera_geo"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Floating-origin and ECEF coordinate primitives for planet-scale Veldera worlds"

[dependencies]
bevy = { version = "0.18.0", default-features = false }
glam = "0.30"

[lints]
workspace = true
