[package]
name = "veldera_input"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Abstract input-intent layer: engine systems read intent resources, apps supply the bindings"

[dependencies]
bevy = { version = "0.18.0", default-features = false }

[lints]
workspace = true
