[package]
name = "veldera_input"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Abstract input-intent layer: engine systems read intent resources, apps supply the bindings"

[dependencies]
bevy = { workspace = true }

[lints]
workspace = true
