[package]
name = "veldera_sky"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Sky integration for Veldera: time-of-day, sun/moon, and atmosphere/cloud rendering driven from the floating-origin camera"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
] }
# `SimpleDate` interops with `chrono::NaiveDate` for date-picker widgets.
chrono = { version = "0.4", default-features = false }
glam = "0.30"
serde = { version = "1", features = ["derive"] }
web-time = "1"
veldera_atmosphere = { path = "../atmosphere", features = ["serde"] }
veldera_config = { path = "../config" }
veldera_constants = { path = "../constants" }
veldera_geo = { path = "../geo" }

# On wasm, `time_of_day` reads the wall clock via the JS `Date` API.
[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"

[lints]
workspace = true
