[package]
name = "veldera_sky"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Sky integration for Veldera: time-of-day, sun/moon, and atmosphere/cloud rendering driven from the floating-origin camera"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
] }
# `SimpleDate` interops with `chrono::NaiveDate` for date-picker widgets.
chrono = { workspace = true }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
web-time = { workspace = true }
veldera_atmosphere = { workspace = true, features = ["serde"] }
veldera_clouds = { workspace = true, features = ["serde"] }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }

# On wasm, `time_of_day` reads the wall clock via the JS `Date` API.
[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { workspace = true }

[lints]
workspace = true
