[package]
name = "veldera_terrain"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Streaming terrain for Veldera: rocktree LOD traversal, async data loading, mesh conversion, and the octant-masked terrain material"

[dependencies]
async-channel = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
] }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
rocktree = { workspace = true }
rocktree-decode = { workspace = true }
veldera_async = { workspace = true }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_physics = { workspace = true }

[lints]
workspace = true
