[package]
name = "veldera_async"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Platform-agnostic async task spawning for native (Tokio) and WASM (Bevy task pool) Veldera builds"

[dependencies]
bevy = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-tokio-tasks = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[lints]
workspace = true
