[package]
name = "veldera_camera"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Floating-origin freelook flight camera for Veldera: WASD/mouse-look movement and a viewer request API (altitude, heading, translate)"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_render",
] }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_input = { workspace = true }

[lints]
workspace = true
