[package]
name = "veldera_geo"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Floating-origin and ECEF coordinate primitives for planet-scale Veldera worlds"

[dependencies]
bevy = { workspace = true }
glam = { workspace = true }

[lints]
workspace = true
